argocd/chart/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`my-cluster.com`)  && PathPrefix(`/argocd`)
    kind: Rule
    services:
    - name: argo-cd-argocd-server
      namespace: argocd
      middlewares:
        - name: strip-argocd
          namespace: traefik
      port: 80

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-argocd
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - /argocd
